--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mobile.css">
+    <link rel="stylesheet" href="./tablet.css">
+    <link rel="stylesheet" href="./desckstop.css">
     <title>WebStudio</title>
 </head>
     <body class="site-body">
@@ -28,6 +31,53 @@
                         <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
                     </ul>
+                    <button type="button" class="menu-open" width="32px" height="22px" data-menu-open>
+                        <svg class="menu-icon-open">
+                            <use href="./images/symbol-defs3.svg#icon-hamburger"></use></svg>
+                    </button>
+                </div>
+                <div class="mob-menu is-hidden" data-menu>
+                    <div class="container">
+                        <div class="">
+                        <button type="button" class="menu-close" width="8px" height="8px" data-menu-close>
+                        <svg class="menu-icon-close">
+                            <use href="./images/symbol-defs3.svg#icon-close-2"></use></svg>
+                        </button>
+                        <ul class="mob-header-list list">
+                            <li><a class="mob-header-link link active" href="./index.html">Studio</a></li>
+                            <li><a class="mob-header-link link" href="./portfolio.html">Portfolio</a></li> 
+                            <li><a class="mob-header-link link" href="./index.html">Contacts</a></li>
+                        </ul>
+                        </div>
+                        <div class="">
+                        <ul class="mob-header-contacts list">
+                            <li><a class="mob-header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a class="mob-header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                        </ul>
+                        <ul class="mob-soc-list list">
+                            <li class="hero-soc-item">
+                                <a href="" class="soc-link link">
+                                    <svg class="hero-soc-icon" width="16" height="16">
+                                    <use href="./images/symbol-defs3.svg#icon-instagram"></use></svg></a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="" class="soc-link link">
+                                    <svg class="hero-soc-icon" width="16" height="16">
+                                    <use href="./images/symbol-defs3.svg#icon-twitter"></use></svg></a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="" class="soc-link link">
+                                    <svg class="hero-soc-icon" width="16" height="16">
+                                    <use href="./images/symbol-defs3.svg#icon-facebook"></use></svg></a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="" class="soc-link link">
+                                    <svg class="hero-soc-icon" width="16" height="16">
+                                    <use href="./images/symbol-defs3.svg#icon-linkedin"></use></svg></a>
+                            </li>
+                        </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
@@ -60,14 +110,14 @@
                                 <h3 class="skills-title">Punctuality</h3>
                                 <p class="skills-after-title">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                             </li>
-                            <li class="skils-item">
+                            <li class="skils-item diligence">
                                 <div class="skills-icon-link">
                                     <svg class="skills-icon" width="64" height="64">
                                         <use href="./images/symbol-defs3.svg#icon-diagram"></use>
                                     </svg>
                                 </div>
                                 <h3 class="skills-title">Diligence</h3>
-                                <p class="skills-after-title">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                                <p class="skills-after-title diligence-after-title">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                             </li>
                             <li class="skils-item">
                                 <div class="skills-icon-link">
@@ -96,7 +146,8 @@
                         <h2 class="hero-team">Our Team</h2>
                         <ul class="hero-list list">
                             <li class="hero-item">
-                                <img class="hero-images list" src="./images/img7.jpg" width="264" height="260" alt="photo">
+                                <picture>
+                                <img class="hero-images list" src="./images/img7.jpg" width="264" height="260" alt="photo"><source srcset="./images/img7.jpg 1x,./images/img7-2x.jpg 2x"></picture>
                                 <div class="hero-box">
                                     <h3 class="hero-name">Mark Guerrero</h3>
                                     <p class="hero-skills">Product Designer</p>
@@ -129,7 +180,8 @@
                                 </div>
                             </li>
                             <li class="hero-item">
-                                <img class="hero-images list" src="./images/img6.jpg" width="264" height="260" alt="photo">
+                                <picture>
+                                <img class="hero-images list" src="./images/img6.jpg" width="264" height="260" alt="photo"><source srcset="./images/img6.jpg 1x,./images/img6-2x.jpg 2x"></picture>
                                 <div class="hero-box">
                                     <h2 class="hero-name">Tom Ford</h2>
                                     <p class="hero-skills">Frontend Developer</p>
@@ -162,7 +214,8 @@
                                 </div>
                             </li>
                             <li class="hero-item">
-                                <img class="hero-images list" src="./images/img5.jpg" width="264" height="260" alt="photo">
+                                <picture>
+                                <img class="hero-images list" src="./images/img5.jpg" width="264" height="260" alt="photo"><source srcset="./images/img5.jpg 1x,./images/img5-2x.jpg 2x"></picture>
                                 <div class="hero-box">
                                     <h3 class="hero-name">Camila Garcia</h3>
                                     <p class="hero-skills">Marketing</p>
@@ -195,7 +248,8 @@
                                 </div>
                             </li>
                             <li class="hero-item">
-                                <img class="hero-images list" src="./images/img4.jpg" width="264" height="260" alt="photo">
+                                <picture>
+                                <img class="hero-images list" src="./images/img4.jpg" width="264" height="260" alt="photo"><source srcset="./images/img4.jpg 1x,./images/img4-2x.jpg 2x"></picture>
                                 <div class="hero-box">
                                     <h3 class="hero-name">Daniel Wilson</h3>
                                     <p class="hero-skills">UI Designer</p>
@@ -325,7 +379,7 @@
                         </form>  
                     </div>
                 </div>
-            </footer>
+            </footer>--->
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
                     <button type="button" class="modal-close-btn" data-modal-close>
@@ -375,5 +429,6 @@
                 </div>
             </div>
             <script src="./js/modal.js"></script>
+            <script src="./js/menu.js"></script>
     </body>
 </html>
