--- a/portfolio.html
+++ b/portfolio.html
@@ -8,27 +8,78 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" >    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" >    
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mobile.css">
+    <link rel="stylesheet" href="./tablet.css">
+    <link rel="stylesheet" href="./desckstop.css">
     <title>WebStudio</title>
 </head>
 <body>
     <header class="header">
             <div class="container">
                 <div class="main-header">
-                <nav class="header-navigation">
-                    <a href="./index.html" class="header-logo link"><span class="header-web">Web</span>Studio</a>
-                    <ul class="header-list list">
-                        <li><a class="header-link link" href="./index.html">Studio</a></li>
-                        <li><a class="header-link link active" href="./portfolio.html">Portfolio</a></li> 
-                        <li><a class="header-link link" href="./index.html">Contacts</a></li>
+                    <nav class="header-navigation">
+                        <a href="./index.html" class="header-logo link"><span class="header-web">Web</span>Studio</a>
+                        <ul class="header-list list">
+                            <li><a class="header-link link" href="./index.html">Studio</a></li>
+                            <li><a class="header-link link active" href="./portfolio.html">Portfolio</a></li> 
+                            <li><a class="header-link link" href="./index.html">Contacts</a></li>
+                        </ul>
+                    </nav>
+                    <ul class="header-contacts list">
+                        <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
                     </ul>
-                </nav>
-                <ul class="header-contacts list">
-                    <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-                </ul>
+                    <button type="button" class="menu-open" width="32px" height="22px" data-menu-open>
+                            <svg class="menu-icon-open">
+                                <use href="./images/symbol-defs3.svg#icon-hamburger"></use></svg>
+                    </button>
                 </div>
             </div>
+            <div class="mob-menu is-hidden" data-menu>
+                    <div class="container">
+                        <div class="">
+                        <button type="button" class="menu-close" width="8px" height="8px" data-menu-close>
+                        <svg class="menu-icon-close">
+                            <use href="./images/symbol-defs3.svg#icon-close-2"></use></svg>
+                        </button>
+                        <ul class="mob-header-list list">
+                            <li><a class="mob-header-link link active" href="./index.html">Studio</a></li>
+                            <li><a class="mob-header-link link" href="./portfolio.html">Portfolio</a></li> 
+                            <li><a class="mob-header-link link" href="./index.html">Contacts</a></li>
+                        </ul>
+                        </div>
+                        <div class="">
+                        <ul class="mob-header-contacts list">
+                            <li><a class="mob-header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a class="mob-header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                        </ul>
+                        <ul class="mob-soc-list list">
+                            <li class="hero-soc-item">
+                                <a href="" class="soc-link link">
+                                    <svg class="hero-soc-icon" width="16" height="16">
+                                    <use href="./images/symbol-defs3.svg#icon-instagram"></use></svg></a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="" class="soc-link link">
+                                    <svg class="hero-soc-icon" width="16" height="16">
+                                    <use href="./images/symbol-defs3.svg#icon-twitter"></use></svg></a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="" class="soc-link link">
+                                    <svg class="hero-soc-icon" width="16" height="16">
+                                    <use href="./images/symbol-defs3.svg#icon-facebook"></use></svg></a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="" class="soc-link link">
+                                    <svg class="hero-soc-icon" width="16" height="16">
+                                    <use href="./images/symbol-defs3.svg#icon-linkedin"></use></svg></a>
+                            </li>
+                        </ul>
+                        </div>
+                    </div>
+                </div>
         </header>
     <main>
         <section class="portfolio">
@@ -200,5 +251,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
